# programming

Infinite House of Pancakes/: main.cpp
genericTimer/: CMakeLists.txt  Makefile
genericTimer/code/: CMakeLists.txt  main.cpp
genericTimer/code/include/: Clock.h  ClockMock.h  GenericTimer.h  IClock.h  Timer.h
genericTimer/code/src/: Clock.cpp  GenericTimer.cpp  Timer.cpp
genericTimer/test/: CMakeLists.txt  GenericTimerTest.cpp  TimerTest.cpp
